--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Annals-of-the-Early-Caliphate-b-From-the-Death-of-Mahomet-to-the-Omeyyad-and-Abbaside-Dynasti__72386
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72386-h/images/cover.jpg
 creator:
   author:
     agent_name: Muir, William, Sir
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/7079
     wikipedia: https://en.wikipedia.org/wiki/William_Muir
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72386#Annals-of-the-Early-Caliphate-b-From-the-Death-of-Mahomet-to-the-Omeyyad-and-Abbaside-Dynasti_
 gutenberg_issued: '2023-12-12'
 gutenberg_type: Text
 identifiers:
